Trying to fix error where button is grey on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,4 @@ label {
 	width: 100%;
 	}
 	/*-------------------*/
-
-	-webkit-appearance: none;
 }
